kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/num/bit.k
use super.*;

pub type Bit {
    zero: Bit,
    one: Bit,
}
