kanc/src/tests/sample_code/should_fail/multi_file/bind/term_in_visibility_modifier/src/foo/mod.k
pub type Unit {
    c: Unit,
}

pub use Unit as Foo;

mod bar;
